istio/cpr-destination-rule-payment_pool_ejection.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: payment
  namespace: aio
spec:
  host: payment
  subsets:
  - labels:
      version: v1
    name: version-v1
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 5.000s
        consecutiveErrors: 1
        interval: 2.000s
        maxEjectionPercent: 100
  - labels:
      version: v2
    name: version-v2
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      loadBalancer:
        simple: RANDOM
      outlierDetection:
        baseEjectionTime: 5.000s
        consecutiveErrors: 1
        interval: 2.000s
        maxEjectionPercent: 100
