istio/cpr-virtual-service-payment-v1_and_v2_50_50.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: aio
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
        subset: version-v1
      weight: 50
    - destination:
        host: payment
        subset: version-v2
      weight: 50
---
