istio/dialogFlow-payment-v2-90.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: aio
spec:
  hosts:
  - movies
  http:
  - route:
    - destination:
        host: payment
        subset: version-v1
      weight: 10
    - destination:
        host: payment
        subset: version-v2
      weight: 90
---
