istio/dialogFlow-payment-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: aio
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
        subset: version-v2
      weight: 100
---
