istio/fi-virtual-service-payment-401.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: aio
spec:
  hosts:
  - payment
  http:
  - fault:
      abort:
        httpStatus: 401
        percent: 50
    route:
    - destination:
        host: payment
        subset: app-payment
---
