istio/fi-virtual-service-payment-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: aio
spec:
  hosts:
  - payment
  http:
  - fault:
      delay:
        fixedDelay: 3.000s
        percent: 100
    route:
    - destination:
        host: payment
        subset: app-payment
---
