istio/mtls-destinationrule-tls.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
spec:
  host: "*.aio.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
