istio/x-destination-rule-payment_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
  namespace: aio
spec:
  host: payment
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
